[project]
name = "session-sampling-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "milestone-timer>=1.0.0",
    "pandas>=2.2.3",
    "polars>=1.19.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "session-sampling-simulator>=0.2.0",
    "sqlalchemy>=2.0.40",
]
